--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,6 @@
     }
   },
   "tasks": {
-    "exec": "deno run --allow-read --allow-write --import-map ./imports.json ./src/main.ts"
+    "exec": "deno run --allow-net --allow-read --allow-write --import-map ./imports.json ./src/main.ts"
   }
 }
